--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "description": "01 Binary Website",
-
   "devDependencies": {
     "bower": "^1.7.9",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
     "gulp-connect": "4.1.0",
+    "gulp-minify": "0.0.12",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
@@ -15,17 +16,13 @@
     "karma-jasmine": "^0.3.8",
     "protractor": "^3.2.2"
   },
-
   "scripts": {
-      
     "postinstall": "bower install",
-      
     "prestart": "npm install",
     "start": "gulp",
-
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
-    
-    "ftest": "protractor protractor.conf.js"
+    "ftest": "protractor protractor.conf.js",
+    "min": "gulp minify"
   }
 }
