--- a/project.json
+++ b/project.json
@@ -40,7 +40,10 @@
 
   "buildOptions": {
     "emitEntryPoint": true,
-    "preserveCompilationContext": true
+    "preserveCompilationContext": true,
+    "compile": {
+      "exclude": ["node_modules"]
+    }
   },
 
   "runtimeOptions": {
@@ -66,6 +69,6 @@
   },
 
   "tooling": {
-    "defaultNamespace": "WebApplicationBasic"
+    "defaultNamespace": "ZeroWeb"
   }
 }
