--- a/package.json
+++ b/package.json
@@ -5,23 +5,18 @@
   "description": "01 Binary Website",
   "devDependencies": {
     "bower": "^1.7.9",
-    "grunt": "^1.0.1",
-    "grunt-contrib-uglify": "^1.0.1",
-    "grunt-contrib-watch": "^1.0.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
-    "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.8",
     "protractor": "^3.2.2"
   },
   "scripts": {
     "postinstall": "bower install",
     "prestart": "npm install",
-    "start": "gulp",
+    "start": "dotnet run",
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
-    "ftest": "protractor protractor.conf.js",
-    "min": "gulp minify"
+    "ftest": "protractor protractor.conf.js"
   }
 }
