Complete conversion to ASP.NET Core MVC, needs more work on routing

--- a/bundleconfig.json
+++ b/bundleconfig.json
@@ -11,6 +11,7 @@
       "Scripts/jquery/dist/jquery.js",
       "Scripts/angular/angular.js",
       "Scripts/angular-route/angular-route.js",
+      "Scripts/app/*.js",
       "Scripts/app/*/*.js"
     ],
     "minify": {
