--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "angular": "1.5.7",
     "angular-mocks": "1.5.7",
-    "jquery": "^3.1.0"
+    "jquery": "^3.1.0",
+    "angular-route": "^1.5.7"
   }
 }
