--- a/bower.json
+++ b/bower.json
@@ -14,9 +14,13 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "1.5.7",
-    "angular-mocks": "1.5.7",
     "jquery": "^3.1.0",
-    "angular-route": "^1.5.7"
+    "angular": "1.5.8",
+    "angular-mocks": "1.5.8",
+    "angular-route": "1.5.8",
+    "angular-resource": "1.5.8"
+  },
+  "devDependencies": {
+    "markdown-it": "^7.0.0"
   }
 }
