--- a/bundleconfig.json
+++ b/bundleconfig.json
@@ -11,6 +11,8 @@
       "Scripts/jquery/dist/jquery.js",
       "Scripts/angular/angular.js",
       "Scripts/angular-route/angular-route.js",
+      "Scripts/angular-resource/angular-resource.js",
+      "Scripts/markdown-it/dist/markdown-it.js",
       "Scripts/app/*.js",
       "Scripts/app/*/*.js"
     ],
