--- a/bower.json
+++ b/bower.json
@@ -18,9 +18,7 @@
     "angular": "1.5.8",
     "angular-mocks": "1.5.8",
     "angular-route": "1.5.8",
-    "angular-resource": "1.5.8"
-  },
-  "devDependencies": {
+    "angular-resource": "1.5.8",
     "markdown-it": "^7.0.0"
   }
 }
