--- a/bundleconfig.json
+++ b/bundleconfig.json
@@ -1,14 +1,9 @@
 [
   {
-    "outputFileName": "wwwroot/zero.min.css",
-    "inputFiles": [
-      "Styles/*.css"
-    ]
-  },
-  {
     "outputFileName": "wwwroot/zero.min.js",
     "inputFiles": [
       "Scripts/jquery/dist/jquery.js",
+      "Scripts/jquery-ui/jquery-ui.js",
       "Scripts/angular/angular.js",
       "Scripts/angular-route/angular-route.js",
       "Scripts/angular-resource/angular-resource.js",
