--- a/project.json
+++ b/project.json
@@ -87,6 +87,7 @@
   "scripts": {
     "precompile": [ "dotnet bundle", "gulp sass" ],
     "prepublish": [ "bower install" ],
+    "watchstyles": [ "gulp sass:watch" ],
     "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
   },
 
