--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular-route": "1.5.8",
     "angular-resource": "1.5.8",
     "markdown-it": "^7.0.0",
-    "jquery-ui": "^1.12.0"
+    "jquery-ui": "^1.12.0",
+    "angular-loading-bar": "^0.9.0"
   }
 }
