--- a/project.json
+++ b/project.json
@@ -17,6 +17,7 @@
     "Microsoft.AspNetCore.Authentication.Twitter" : "1.0.0",
     "Microsoft.AspNetCore.Authentication.MicrosoftAccount" : "1.0.0",
     "AspNet.Security.OAuth.GitHub" : "1.0.0-beta1-final",
+    "AspNet.Security.OAuth.LinkedIn" : "1.0.0-beta1-final",
     "Microsoft.AspNetCore.Authentication.OAuth": "1.0.0",
     "Microsoft.AspNetCore.Session": "1.0.0",
     "Microsoft.AspNetCore.Mvc": "1.0.0",
