--- a/project.json
+++ b/project.json
@@ -18,6 +18,7 @@
     "Microsoft.AspNetCore.Authentication.MicrosoftAccount" : "1.0.0",
     "AspNet.Security.OAuth.GitHub" : "1.0.0-beta1-final",
     "AspNet.Security.OAuth.LinkedIn" : "1.0.0-beta1-final",
+    "AspNet.Security.OAuth.Reddit" : "1.0.0-beta1-final",
     "Microsoft.AspNetCore.Authentication.OAuth": "1.0.0",
     "Microsoft.AspNetCore.Session": "1.0.0",
     "Microsoft.AspNetCore.Mvc": "1.0.0",
