--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 *.DS_Store
-node_modules/
-bin/
-obj/
-project.lock.json
-wwwroot/*.min.*
-Scripts/angular*
-Scripts/jquery*
-Scripts/markdown*
-*.key
+src/Packages/
+src/bin/
+src/obj/
+src/project.lock.json
+src/Content/*.min.*
