--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,16 +6,16 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceRoot}/bin/Debug/netcoreapp1.0/zeroweb.dll",
+            "program": "${workspaceRoot}/src/Build/Debug/netcoreapp1.0/zeroweb.dll",
             "args": [],
-            "cwd": "${workspaceRoot}",
+            "cwd": "${workspaceRoot}/src",
             "stopAtEntry": false,
             "launchBrowser": {
                 "enabled": true,
-                "args": "${auto-detect-url}",
+                "args": "https://localhost:5001",
                 "windows": {
                     "command": "cmd.exe",
-                    "args": "/C start ${auto-detect-url}"
+                    "args": "/C start https://localhost:5001"
                 },
                 "osx": {
                     "command": "open"
@@ -27,12 +27,6 @@
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             }
-        },
-        {
-            "name": ".NET Core Attach",
-            "type": "coreclr",
-            "request": "attach",
-            "processId": 0
         }
     ]
 }
