--- a/package.json
+++ b/package.json
@@ -5,20 +5,35 @@
   "description": "01 Binary Website",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^2.0.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
     "karma-jasmine": "^0.3.8",
-    "protractor": "^3.2.2"
+    "merge-stream": "^1.0.0",
+    "protractor": "^3.2.2",
+    "pump": "^1.0.1"
   },
   "scripts": {
-    "postinstall": "",
-    "prestart": "npm install",
+    "prebuild": "npm install",
+    "build": "gulp --gulpfile .vscode/gulpfile.js",
+    "prestart": "npm build",
     "start": "dotnet run",
     "pretest": "npm install",
     "test": "karma start Scripts/Tests/karma.conf.js",
-    "ftest": "protractor Scripts/Tests/protractor.conf.js"
+    "e2e": "protractor Scripts/Tests/protractor.conf.js"
+  },
+  "dependencies": {
+    "angular": "^1.5.8",
+    "angular-loading-bar": "^0.9.0",
+    "angular-mocks": "^1.5.8",
+    "angular-resource": "^1.5.8",
+    "angular-route": "^1.5.8",
+    "jquery": "^3.1.1",
+    "jquery-ui": "^1.12.1",
+    "markdown-it": "^8.0.1"
   }
 }
