--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,9 @@
     "version": "0.1.0",
     "command": "dotnet",
     "isShellCommand": true,
+    "options": {
+        "cwd": "src"
+    },
     "args": [],
     "tasks": [
         {
