Fix warning when compiling intermediate files from prev build

--- a/src/project.json
+++ b/src/project.json
@@ -69,7 +69,10 @@
 
   "buildOptions": {
     "emitEntryPoint": true,
-    "preserveCompilationContext": true
+    "preserveCompilationContext": true,
+    "compile": {
+      "exclude": ["Build"]
+    }
   },
 
   "runtimeOptions": {
