--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postinstall": "node .vscode/restore",
     "build": "node .vscode/build",
     "start": "node .vscode/run",
+    "watch": "node .vscode/watch",
     "database": "node .vscode/ef database",
     "migrations": "node .vscode/ef migrations",
     "test": "node .vscode/test"
