--- a/src/project.json
+++ b/src/project.json
@@ -79,7 +79,7 @@
     }
   },
 
-  "webroot": "Content",
+  "webroot": "./Content",
 
   "userSecretsId": "aspnet-ZeroWeb-0723def9-a37b-44a7-a3b1-b0c201eba7de",
 
