--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-sass": "^2.3.2",
+    "gulp-strip-json-comments": "^2.0.0",
     "gulp-uglify": "^2.0.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
