Fix settings not loading from package.json

--- a/src/Properties/appsettings.json
+++ b/src/Properties/appsettings.json
@@ -1,4 +1,9 @@
 {
+    "webroot": "Content",
+    "url": "https://localhost:5001",
+    "cert": "Certificates/cert.pfx",
+    "password": "password",
+
     "ConnectionStrings":
     {
         "ZeroDatabase": "data source=Zero.s3db;"
