--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
     "rimraf": "^2.5.4"
   },
   "scripts": {
-    "postinstall": "node .vscode/restore",
-    "build": "node .vscode/build",
-    "start": "node .vscode/run",
-    "watch": "node .vscode/watch",
-    "uglify": "node .vscode/build uglify",
-    "sass": "node .vscode/build sass",
-    "uglify:watch": "node .vscode/watch uglify",
-    "sass:watch": "node .vscode/watch sass",
-    "database": "node .vscode/ef database",
-    "migrations": "node .vscode/ef migrations",
-    "test": "node .vscode/test",
-    "clean": "node .vscode/build clean"
+    "postinstall": "node build/tasks/restore",
+    "build": "node build/tasks/build",
+    "start": "node build/tasks/run",
+    "watch": "node build/tasks/watch",
+    "uglify": "node build/tasks/build uglify",
+    "sass": "node build/tasks/build sass",
+    "uglify:watch": "node build/tasks/watch uglify",
+    "sass:watch": "node build/tasks/watch sass",
+    "database": "node build/tasks/ef database",
+    "migrations": "node build/tasks/ef migrations",
+    "test": "node build/tasks/test",
+    "clean": "node build/tasks/build clean"
   },
   "dependencies": {
     "angular": "^1.5.8",
