--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
+    "gulp-iife": "^0.3.0",
     "gulp-sass": "^2.3.2",
     "gulp-strip-json-comments": "^2.0.0",
     "gulp-uglify": "^2.0.0",
