--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
                 "args": "https://localhost:5001",
                 "windows": {
                     "command": "cmd.exe",
-                    "args": "/C start"
+                    "args": "/C start https://localhost:5001"
                 },
                 "osx": {
                     "command": "open"
