--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "description": "01 Binary Website",
   "devDependencies": {
+    "cross-spawn": "^5.0.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-iife": "^0.3.0",
@@ -15,7 +16,8 @@
     "karma-chrome-launcher": "^0.2.3",
     "karma-jasmine": "^0.3.8",
     "protractor": "^3.2.2",
-    "rimraf": "^2.5.4"
+    "rimraf": "^2.5.4",
+    "spawn-sync": "^1.0.15"
   },
   "scripts": {
     "postinstall": "node build/tasks/restore",
