--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "angular-resource": "^1.5.8",
     "angular-route": "^1.5.8",
     "jquery": "^3.1.1",
-    "jquery-ui": "^1.12.1",
-    "markdown-it": "^8.0.1"
+    "jquery-ui": "^1.12.1"
   }
 }
