--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "angular-resource": "^1.5.8",
     "angular-route": "^1.5.8",
     "jquery": "^3.1.1",
-    "jquery-ui": "^1.12.1"
+    "jquery-ui": "^1.12.1",
+    "three": "^0.83.0"
   }
 }
