--- a/package.json
+++ b/package.json
@@ -4,21 +4,6 @@
   "version": "1.0.0",
   "description": "01 Binary Website",
   "devDependencies": {
-    "cross-spawn": "^5.0.1",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-iife": "^0.3.0",
-    "gulp-sass": "^2.3.2",
-    "gulp-strip-json-comments": "^2.0.0",
-    "gulp-uglify": "^2.0.0",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-jasmine": "^0.3.8",
-    "protractor": "^3.2.2",
-    "rimraf": "^2.5.4",
-    "spawn-sync": "^1.0.15",
-    "yarn": "^0.23.4"
   },
   "scripts": {
     "postinstall": "node build/tasks/restore",
@@ -36,6 +21,21 @@
     "clean": "node build/tasks/build clean"
   },
   "dependencies": {
+    "cross-spawn": "^5.0.1",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-iife": "^0.3.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-strip-json-comments": "^2.0.0",
+    "gulp-uglify": "^2.0.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-jasmine": "^0.3.8",
+    "protractor": "^3.2.2",
+    "rimraf": "^2.5.4",
+    "spawn-sync": "^1.0.15",
+    "yarn": "^0.23.4",
     "angular": "^1.5.8",
     "angular-loading-bar": "^0.9.0",
     "angular-mocks": "^1.5.8",
