--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
+language: node_js
+
+node_js:
+  - "12"
+
+script:
+  - yarn build
+
 deploy:
   provider: s3
   access_key_id: AKIAQZRIRXETKVMEBGLU
@@ -6,3 +14,8 @@ deploy:
   bucket: zeroweb
   region: us-west-2
   acl: public_read
+  local_dir: public
+
+after_deploy:
+  - aws configure set preview.cloudfront true
+  - aws cloudfront create-invalidation --distribution
