--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: node_js
 
 node_js:
-  - "12"
+  - "stable"
+
+cache:
+  directories:
+  - node_modules
 
 script:
   - yarn build
@@ -15,6 +19,11 @@ deploy:
   region: us-west-2
   acl: public_read
   local_dir: public
+  on:
+    branch: master
+
+before_deploy:
+  - ls public
 
 after_deploy:
   - aws configure set preview.cloudfront true
