--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-plugin-styled-components": "^3.10.0",
+    "gatsby-plugin-transform-imports": "^1.0.0",
     "gatsby-remark-images": "^3.11.0",
     "gatsby-remark-smartypants": "^2.10.0",
     "gatsby-source-filesystem": "^2.11.0",
