--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "zeroweb",
-  "author": "01binary",
+  "author": "Valeriy Novytskyy",
   "keywords": [
     "gatsby"
   ],
@@ -17,7 +17,6 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@types/reach__router": "^1.3.7",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.32.3",
     "gatsby-image": "^2.11.0",
@@ -34,6 +33,7 @@
     "gatsby-remark-images": "^3.11.0",
     "gatsby-remark-smartypants": "^2.10.0",
     "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-styled-components-dark-mode": "^2.0.3",
     "gatsby-transformer-sharp": "^2.12.0",
     "prism-react-renderer": "^1.1.1",
     "react": "^16.13.1",
@@ -41,6 +41,11 @@
     "react-helmet": "^6.1.0",
     "sass": "^1.32.7",
     "slugify": "^1.4.7",
-    "styled-components": "^4.4.1"
+    "styled-components": "5.2.0"
+  },
+  "devDependencies": {
+    "ts-node": "^8.1.0",
+    "typescript": "^4.2.3",
+    "@types/reach__router": "^1.3.7"
   }
 }
