--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-popper-tooltip": "^4.2.0",
     "sass": "^1.32.7",
     "slugify": "^1.4.7",
     "styled-components": "5.2.0"
   },
   "devDependencies": {
+    "@types/reach__router": "^1.3.7",
     "ts-node": "^8.1.0",
-    "typescript": "^4.2.3",
-    "@types/reach__router": "^1.3.7"
+    "typescript": "^4.2.3"
   }
 }
