--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "develop": "NODE_OPTIONS='-r esm' gatsby develop",
+    "start": "NODE_OPTIONS='-r esm' gatsby develop",
+    "build": "NODE_OPTIONS='-r esm' gatsby build",
+    "serve": "NODE_OPTIONS='-r esm' gatsby serve",
+    "clean": "NODE_OPTIONS='-r esm' gatsby clean"
   },
   "dependencies": {
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@popperjs/core": "^2.9.2",
     "babel-plugin-styled-components": "^1.12.0",
+    "esm": "^3.2.25",
     "gatsby": "^2.32.3",
+    "gatsby-awesome-pagination": "^0.3.8",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-google-analytics": "^2.11.0",
