--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/react": "^1.6.22",
     "@popperjs/core": "^2.9.2",
     "babel-plugin-styled-components": "^1.12.0",
+    "dayjs": "^1.10.4",
     "esm": "^3.2.25",
     "gatsby": "^2.32.3",
     "gatsby-awesome-pagination": "^0.3.8",
@@ -38,6 +39,8 @@
     "gatsby-source-filesystem": "^2.11.0",
     "gatsby-styled-components-dark-mode": "^2.0.3",
     "gatsby-transformer-sharp": "^2.12.0",
+    "lodash.compose": "^2.4.1",
+    "lodash.flatmap": "^4.5.0",
     "prism-react-renderer": "^1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
