--- a/src/server/package.json
+++ b/src/server/package.json
@@ -7,16 +7,18 @@
   "license": "MIT",
   "scripts": {
     "build": "babel src --out-dir dist",
-    "start": "babel src --out-dir dist && node dist/handler.js",
-    "graphiql": "babel src --out-dir dist && node dist/graphiql.js"
+    "start": "babel src --out-dir dist && node dist/playground.js",
+    "deploy": "chmod +x ./build/package.sh && chmod +x ./build/deploy.sh && ./build/package.sh && ./build/deploy.sh"
   },
   "dependencies": {
-    "graphql": "^15.5.0",
-    "graphql-iso-date": "^3.6.1"
+    "apollo-server-lambda": "^2.23.0",
+    "aws-sdk": "^2.892.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "graphql": "^15.5.0"
   },
   "devDependencies": {
-    "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
+    "apollo-server": "^2.23.0",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0"
