Dynamo DB full access for lambda

--- a/server/template.yaml
+++ b/server/template.yaml
@@ -8,6 +8,8 @@ Resources:
           Handler: graphql.handler
           Runtime: nodejs14.x
           CodeUri: ./dist
+          Policies:
+            - AmazonDynamoDBFullAccess
           Events:
             AnyRequest:
               Type: Api
