--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-helmet": "^6.1.0",
     "sass": "^1.32.7",
     "slugify": "^1.4.7",
+    "string-hash": "^1.1.3",
     "styled-components": "5.2.0"
   },
   "devDependencies": {
