--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "NODE_OPTIONS='-r esm' gatsby develop",
+    "deploy-backend": "chmod +x ./build/package.sh && chmod +x ./build/deploy.sh && ./build/package.sh && ./build/deploy.sh",
+    "deploy": "TODO",
     "start": "NODE_OPTIONS='-r esm' gatsby develop --https",
     "build": "NODE_OPTIONS='-r esm' gatsby build",
     "serve": "NODE_OPTIONS='-r esm' gatsby serve",
