Use environment as stage name and move from src

--- a/template.yaml
+++ b/template.yaml
@@ -5,7 +5,7 @@ Resources:
       Type: "AWS::Serverless::Api"
       Properties:
         Name: "zeroweb-api"
-        StageName: "zeroweb-api"
+        StageName: "prod"
     ApiLambda:
         Type: AWS::Serverless::Function
         Properties:
