--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@popperjs/core": "^2.9.2",
+    "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.12.0",
     "dayjs": "^1.10.4",
     "esm": "^3.2.25",
@@ -43,6 +44,7 @@
     "lodash.compose": "^2.4.1",
     "lodash.flatmap": "^4.5.0",
     "prism-react-renderer": "^1.1.1",
+    "query-string": "^7.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
