--- a/template.yaml
+++ b/template.yaml
@@ -35,17 +35,31 @@ Resources:
           Runtime: nodejs14.x
           CodeUri: ./auth-server
           Events:
-            TwitterLogin:
+            TwitterRequestToken:
               Type: Api
               Properties:
-                Path: /twitter
-                Method: get
-                RestApiId: 
+                Path: /twitter/oauth/request_token
+                Method: post
+                RestApiId:
                   Ref: ApiGateway
-            TwitterCallback:
+            TwitterAccessToken:
               Type: Api
               Properties:
-                Path: /twitter/callback
+                Path: /twitter/oauth/access_token
+                Method: post
+                RestApiId:
+                  Ref: ApiGateway
+            TwitterLogout:
+              Type: Api
+              Properties:
+                Path: /twitter/logout
+                Method: post
+                RestApiId:
+                  Ref: ApiGateway
+            TwitterUserInfo:
+              Type: Api
+              Properties:
+                Path: /twitter/user
                 Method: get
                 RestApiId:
                   Ref: ApiGateway
