--- a/auth-server/package.json
+++ b/auth-server/package.json
@@ -5,12 +5,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.903.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
     "oauth": "^0.9.15",
     "querystring": "^0.2.1",
     "serverless-http": "^2.7.0",
