--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "clean": "NODE_OPTIONS='-r esm' gatsby clean"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.18",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@popperjs/core": "^2.9.2",
+    "apollo-client-aws-ni": "^1.0.6",
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.12.0",
     "dayjs": "^1.10.4",
@@ -41,6 +43,7 @@
     "gatsby-source-filesystem": "^2.11.0",
     "gatsby-styled-components-dark-mode": "^2.0.3",
     "gatsby-transformer-sharp": "^2.12.0",
+    "graphql": "^15.5.0",
     "lodash.compose": "^2.4.1",
     "lodash.flatmap": "^4.5.0",
     "prism-react-renderer": "^1.1.1",
