--- a/template.yaml
+++ b/template.yaml
@@ -11,7 +11,8 @@ Resources:
           AllowOrigin: "'*'"
           AllowHeaders: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
         Auth:
-          DefaultAuthorizer: NONE
+          DefaultAuthorizer: 'NONE'
+          InvokeRole: 'NONE'
     ApiLambda:
         Type: AWS::Serverless::Function
         Properties:
@@ -26,7 +27,7 @@ Resources:
               Type: Api
               Properties:
                 Path: /graphql
-                Method: post
+                Method: any
                 RestApiId:
                   Ref: ApiGateway
                 Auth:
@@ -49,8 +50,6 @@ Resources:
                 Method: post
                 RestApiId:
                   Ref: ApiGateway
-                Auth:
-                  Authorizer: 'NONE'
             DeleteCognitoIdentity:
               Type: Api
               Properties:
@@ -58,8 +57,6 @@ Resources:
                 Method: delete
                 RestApiId:
                   Ref: ApiGateway
-                Auth:
-                  Authorizer: 'NONE'
             TwitterRequestToken:
               Type: Api
               Properties:
@@ -67,8 +64,6 @@ Resources:
                 Method: post
                 RestApiId:
                   Ref: ApiGateway
-                Auth:
-                  Authorizer: 'NONE'
             TwitterAccessToken:
               Type: Api
               Properties:
@@ -76,8 +71,6 @@ Resources:
                 Method: post
                 RestApiId:
                   Ref: ApiGateway
-                Auth:
-                  Authorizer: 'NONE'
             TwitterUserInfo:
               Type: Api
               Properties:
@@ -85,5 +78,3 @@ Resources:
                 Method: post
                 RestApiId:
                   Ref: ApiGateway
-                Auth:
-                  Authorizer: 'NONE'
