Basic post comments

--- a/template.yaml
+++ b/template.yaml
@@ -27,7 +27,7 @@ Resources:
               Type: Api
               Properties:
                 Path: /graphql
-                Method: any
+                Method: post
                 RestApiId:
                   Ref: ApiGateway
                 Auth:
