--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "clean": "NODE_OPTIONS='-r esm' gatsby clean"
   },
   "dependencies": {
-    "@apollo/client": "^3.3.18",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@popperjs/core": "^2.9.2",
@@ -44,6 +43,7 @@
     "gatsby-styled-components-dark-mode": "^2.0.3",
     "gatsby-transformer-sharp": "^2.12.0",
     "graphql": "^15.5.0",
+    "graphql-tag": "^2.12.4",
     "lodash.compose": "^2.4.1",
     "lodash.flatmap": "^4.5.0",
     "prism-react-renderer": "^1.1.1",
