--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-markdown": "^7.1.0",
     "react-measure": "^2.5.2",
     "sass": "^1.32.7",
     "slugify": "^1.4.7",
