--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prism-react-renderer": "^1.1.1",
     "query-string": "^7.0.0",
     "react": "^16.13.1",
+    "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-markdown": "^7.1.0",
