--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "clean": "NODE_OPTIONS='-r esm' gatsby clean"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.5",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@popperjs/core": "^2.9.2",
-    "apollo-client-aws-ni": "^1.0.6",
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.12.0",
     "dayjs": "^1.10.4",
@@ -42,14 +42,13 @@
     "gatsby-source-filesystem": "^2.11.0",
     "gatsby-styled-components-dark-mode": "^2.0.3",
     "gatsby-transformer-sharp": "^2.12.0",
-    "graphql": "^15.5.0",
+    "graphql": "^16.0.1",
     "graphql-tag": "^2.12.4",
     "lodash.compose": "^2.4.1",
     "lodash.flatmap": "^4.5.0",
     "prism-react-renderer": "^1.1.1",
     "query-string": "^7.0.0",
     "react": "^16.13.1",
-    "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-markdown": "^7.1.0",
