--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@popperjs/core": "^2.9.2",
+    "apollo3-cache-persist": "^0.13.0",
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.12.0",
     "dayjs": "^1.10.4",
