--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   ],
   "scripts": {
     "deploy-backend": "chmod +x ./build/package.sh && chmod +x ./build/deploy.sh && ./build/package.sh && ./build/deploy.sh",
-    "deploy": "TODO",
     "start": "NODE_OPTIONS='-r esm' gatsby develop --https",
     "build": "NODE_OPTIONS='-r esm --openssl-legacy-provider' gatsby build",
+    "build-local": "NODE_OPTIONS='-r esm' gatsby build",
     "serve": "NODE_OPTIONS='-r esm' gatsby serve",
     "clean": "NODE_OPTIONS='-r esm' gatsby clean"
   },
