Install libpng with travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
 cache:
   directories:
   - node_modules
+before_install:
+  apt-get install automake libtool dpkg pkgconfig nasm libpng
 script:
 - yarn build
 deploy:
