--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gatsby-plugin-styled-components": "^3.10.0",
     "gatsby-plugin-transform-imports": "^1.0.0",
     "gatsby-remark-copy-linked-files": "^5.10.0",
+    "gatsby-remark-embed-youtube": "^0.0.7",
     "gatsby-remark-images": "^3.11.0",
     "gatsby-remark-smartypants": "^2.10.0",
     "gatsby-source-filesystem": "^2.11.0",
