--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,11 @@ node_js:
 cache:
   directories:
     - node_modules
-before_install: sudo apt-get install automake libtool dpkg pkg-config nasm libpng12-dev wget make g++
+before_install: sudo add-apt-repository ppa:ubuntu-toolchain-r/test;
+  sudo apt-get update;
+  sudo apt-get install gcc-4.9;
+  sudo apt-get upgrade libstdc++6;
+  sudo apt-get install automake libtool dpkg pkg-config nasm libpng12-dev
 script:
   - yarn build
 deploy:
