--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "graphql-tag": "^2.12.4",
     "lodash.compose": "^2.4.1",
     "lodash.flatmap": "^4.5.0",
+    "photoswipe": "^5.2.7",
     "prism-react-renderer": "^1.1.1",
     "query-string": "^7.0.0",
     "react": "^16.13.1",
