--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "deploy-backend": "chmod +x ./build/package.sh && chmod +x ./build/deploy.sh && ./build/package.sh && ./build/deploy.sh",
     "start": "NODE_OPTIONS='-r esm' gatsby develop --https",
-    "build": "NODE_OPTIONS='-r esm --openssl-legacy-provider' gatsby build",
-    "build-local": "NODE_OPTIONS='-r esm' gatsby build",
+    "build-ci": "NODE_OPTIONS='-r esm --openssl-legacy-provider' gatsby build",
+    "build": "NODE_OPTIONS='-r esm' gatsby build",
     "serve": "NODE_OPTIONS='-r esm' gatsby serve",
     "clean": "NODE_OPTIONS='-r esm' gatsby clean"
   },
@@ -29,7 +29,7 @@
     "gatsby-awesome-pagination": "^0.3.8",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
-    "gatsby-plugin-google-gtag": "^4.11.0",
+    "gatsby-plugin-google-gtag": "2.8.0",
     "gatsby-plugin-manifest": "^2.12.0",
     "gatsby-plugin-mdx": "^1.10.0",
     "gatsby-plugin-offline": "^3.10.0",
