--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@popperjs/core": "^2.9.2",
     "accessible-nprogress": "^2.1.2",
     "apollo3-cache-persist": "^0.13.0",
+    "autocompleter": "^6.1.3",
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.12.0",
     "dayjs": "^1.10.4",
