--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-google-gtag": "2.8.0",
+    "gatsby-plugin-image": "^1",
     "gatsby-plugin-manifest": "^2.12.0",
     "gatsby-plugin-mdx": "^1.10.0",
     "gatsby-plugin-offline": "^3.10.0",
