--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "lodash.flatmap": "^4.5.0",
     "photoswipe": "^5.2.7",
     "prism-react-renderer": "^1.1.1",
+    "prismjs": "^1.23.0",
     "query-string": "^7.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
